# sgad

./: .gitignore  adjointsampling.md  cache_dataset.py  download_models.py  environment.yml  plot_datascaling.py  plot_natoms_scaling.py  pyproject.toml  readme.md  requirements.txt  run.sh  sgad.md  wandb_datascaling_loss_energy.csv  wandb_datascaling_loss_force.csv  wandb_datascaling_loss_hessian.csv  wandb_natoms_scaling.parquet
configs/: train.yaml
configs/c/: base.yaml  debug.yaml
configs/controller/: egnn.yaml  tpsm_medium.yaml
configs/dataset/: spice_dataset.yaml  t1x_dataset.yaml
configs/energy/: fairchem_energy.yaml  hip_energy.yaml  hip_gad_energy.yaml
configs/experiment/: t1x.yaml  t1x_gad.yaml
configs/noise_schedule/: geometric.yaml  geometric_torsion.yaml  linear.yaml  linear_torsion.yaml
configs/x/: spice_cartesian_bmam.yaml  spice_torsion.yaml  t1x.yaml  t1x_bm.yaml  t1x_bmas.yaml  t1x_gad.yaml  t1x_gad_bm.yaml
examples/: example_t1x.py  gad2d.py  gad_simple.py  mode_gen.py  score_matching.py  score_matching_gad.py  score_matching_gad_torch.py
playground/: ev_sm.py  example_hip.py  example_t1x.py  gad_sm.py  run_gad.py  score_matching_gad_hip_torch.py  train_lj_gad.py  train_lj_mlp.py
scripts/: eval.py  killarney.sh  killarney_2xh100.sh  killarney_h100.sh  train.py
sgad/: eval_loop.py  optimizer.py  optimizer_np.py  optimizer_torch.py  plot_molecules.py  rfo.py  rfo_np.py  rfo_torch.py  train_loop.py
tests/: adapt_step.py  gddis.py  geometry.py  optimizers.py  optimizers_t1x_torch_vs_np.py  optimizers_torch_vs_np.py
(+24 files in other folders)
