[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgad"
version = "0.0.1"
authors = [
  { name="Andreas Burger", email="andreas.burger@mail.utoronto.ca" },
]
description = "Sampling Transition States along the Gentlest Ascent Dynamics"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BurgerAndreas/sgad"
